# tutor-multi-agent

./: .gitignore  a.py  goal_steps.json  parsed_new.json  parsed_result.json  pyproject.toml  requirements.txt  result.txt  semantic_blocks.json  tutor.json
src/: agent.py  comparator.py  decide.py  decorators.py  director-agent.py  document_module.py  env_context_queue.py  logger.py  md_manager.py  md_parser.py  orquestrator.py  professor-agent.py  semantic_block.py  trigger.py  tutor.py
src/agents/: director_agent.py  orquestrator.py  professor_agent.py  student_profiler.py
src/agents/director/: director_agent.py  step_manager.py
src/agents/director/prompts/: goal_base.txt  update_goal.txt
src/agents/professor/: professor_agent.py
src/agents/professor/prompts/: elaborate_question.txt  new_step.txt  profile_user_progress.txt  research_topic.txt
src/agents/prompts/director/: elaborate_goal.txt
src/agents/prompts/professor/: answer_user.txt  evaluate_answer.txt  research_topic.txt
src/document_module/: comparator.py  document_module.py  md_manager.py  md_parser.py
src/modules/document/: comparator.py  decide.py  document_module.py  env_context_queue.py  file_index.py  main.py  md_manager.py  md_parser.py  parameters.py  semantic_block.py  trigger.py
src/mtypes/: changes.py  contexted_call.py  document_change.py  goal_steps.py  semantic_block.py
src/utils/: decorators.py  file_interaction.py  token_counter.py
